aggiunto separatore tra bottoni nell'header

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <span>
                 </span> Sign up with Google
               </a>
-              <!-- <span>or</span> -->
+              <span class="header__bottom__txt__or">or</span>
               <a class="header__bottom__txt__button" href="" role="button" data-name="slack">
                 <span>
                 </span> Sign up with Slack
@@ -81,7 +81,9 @@
         </div>
       </div>
     </header>
+    <main class="main">
 
+    </main>
   </div>
 </body>
 </html>
