prima seizone odd del main

--- a/index.html
+++ b/index.html
@@ -82,7 +82,42 @@
       </div>
     </header>
     <main class="main">
-
+      <div class="main__odd-section-wrapper">
+        <section class="main__how-it-works">
+          <h3 class="main__how-it-works__title">
+            Traditional people processes lead to disengagement and turnover.
+          </h3>
+          <div class="main__how-it-works__info">
+            <div class="main__how-it-works__info__hardcore">
+              <div class="image-wrapper">
+                <img src="img/hardcore.png" alt="immagine">
+              </div>
+              <p>
+                They are hardcore, formal and disconnected
+              </p>
+            </div>
+            <div class="main__how-it-works__info__nofeedback">
+              <div class="image-wrapper">
+                <img src="img/nofeedback.png" alt="immagine">
+              </div>
+              <p>
+                They don't encourage regular feedback
+              </p>
+            </div>
+            <div class="main__how-it-works__info__notsafe">
+              <div class="image-wrapper">
+                <img src="img/notsafe.png" alt="immagine">
+              </div>
+              <p>
+                They don't make it safe to speak up
+              </p>
+            </div>
+          </div>
+          <div class="main__how-it-works__before">
+            <img src="img/before.png" alt="immagine">
+          </div>
+        </section>
+      </div>
     </main>
   </div>
 </body>
