fine prima sezione odd

--- a/index.html
+++ b/index.html
@@ -116,6 +116,42 @@
           <div class="main__how-it-works__before">
             <img src="img/before.png" alt="immagine">
           </div>
+          <hr>
+          <h3 class="main__how-it-works__title">
+            It doesn't have to be like that. Teambit is a modern solution that teammates love.
+          </h3>
+          <div class="main__how-it-works__info">
+            <div class="main__how-it-works__info__lightweight">
+              <div class="image-wrapper">
+                <img src="img/lightweight.png" alt="immagine">
+              </div>
+              <p>
+                It's lightweight fun and interconnected
+              </p>
+            </div>
+            <div class="main__how-it-works__info__feedbacksuggestions">
+              <div class="image-wrapper">
+                <img src="img/feedbacksuggestions.png" alt="immagine">
+              </div>
+              <p>
+                It encourages regular feedback with contextual requests
+              </p>
+            </div>
+            <div class="main__how-it-works__info__safe">
+              <div class="image-wrapper">
+                <img src="img/safe.png" alt="immagine">
+              </div>
+              <p>
+                It creates a safe environment for dialog
+              </p>
+            </div>
+          </div>
+          <div class="main__how-it-works__after">
+            <img src="img/after.png" alt="immagine">
+          </div>
+          <h3 class="main__how-it-works__title">
+            Here is how it works
+          </h3>
         </section>
       </div>
     </main>
