aggiunto hamburger alla navbar

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
                   </span> Sign up
                 </a>
               </span>
+              <span class="header__top__navbar__item" role="listitem" data-name="hamburger">
+                <a href="">
+                  <span>
+                    <i class="fas fa-bars"></i>
+                  </span>
+                </a>
+              </span>
             </nav>
           </section>
         </div>
